<resources>
    <string name="app_name">Easel</string>

    <!-- StartFragment -->
    <string name="start_fragment_headline">지금 세계에서 무슨 일이 일어\n나고 있는지 알아보세요.</string>
    <string name="start_fragment_else">또는</string>
    <string name="start_fragment_join">계정 만들기</string>
    <string name="start_fragment_ask_login">이미 계정이 있으세요?</string>
    <string name="start_fragment_login">로그인하기</string>

    <!-- LoginFragment -->
    <string name="login_fragment_headline">시작하려면 먼저 이메일 또는 사용\n자 아이디를 입력하세요.</string>
    <string name="login_fragment_ask_info">이메일 주소 또는 사용자 아이디</string>
    <string name="login_fragment_forget_pw">비밀번호를 잊으셨나요?</string>
    <string name="login_fragment_next">다음</string>

    <!-- PasswordFragment -->
    <string name="password_fragment_get_password">비밀번호를 입력하세요</string>
    <string name="password_fragment_password">비밀번호</string>
    <string name="password_fragment_login">로그인하기</string>
    <string name="password_fragment_forget_pw"><u>비밀번호를 잊으셨나요?</u></string>

    <!-- FindAccountFragment -->
    <string name="find_account_fragment_find_account">내 Easel 계정 찾기</string>
    <string name="find_account_fragment_announce_info">비밀번호를 변경하려면 계정에 연결된 이메일 또는 사용자\n아이디를 입력해 주세요.</string>
    <string name="find_account_fragment_ask_info">이메일 또는 사용자 아이디</string>
    <string name="find_account_fragment_ok">확인</string>

    <!-- CreateAccountFragment -->
    <string name="create_account_fragment_headline">계정을 생성하세요</string>
    <string name="create_account_fragment_name">이름</string>
    <string name="create_account_fragment_ask_info">이메일 주소</string>
    <string name="create_account_fragment_announcement">가입하면 쿠키 사용을 포함해 이용약관 및 개인정보 처리방침에 동의\n하게 됩니다.
        X는 계정을 안전하게 보호하고 광고를 포함한 맞춤 서비\n스를 제공하는 등 X 개인정보 처리방침에 명시된 목적을 위해 이메일\n주소 및 전화번호 등의
        내연락처 정보를 사용할 수 있습니다. 자세히\n알아보기. 이메일 또는 전화번호를 제공하시면 다른 사람들이 이정보\n로 내 계정을 찾을 수 있게 됩니다.
        해당 정보를 제공하지 않으시려면 \n여기에서 변경하세요.</string>
    <string name="create_account_fragment_next">다음</string>

    <!-- SendCodeFragment -->
    <string name="send_code_fragment_headline">코드를 보내 드렸습니다</string>
    <string name="send_code_fragment_announcement">인증을 위해 아래에 입력하세요.</string>
    <string name="send_code_fragment_email">이메일을 받지 못하셨나요?</string>
    <string name="send_code_fragment_next">다음</string>

    <!-- NeedPasswordFragment -->
    <string name="need_password_fragment_headline">비밀번호가 필요합니다</string>
    <string name="need_password_fragment_announcement">8자 이상이어야 합니다.</string>
    <string name="need_password_fragment_hint">비밀번호</string>
    <string name="need_password_fragment_next">다음</string>

    <!-- ProfileImageFragment -->
    <string name="profile_image_fragment_headline">프로필 사진 선택하기</string>
    <string name="profile_image_fragment_announcement">마음에 드는 셀카 사진이 있나요? 지금 업로드하세요.</string>
    <string name="profile_image_fragment_next">다음</string>
    <string name="profile_image_fragment_skip"><u>지금은 넘어가기</u></string>

    <!-- AskNameFragment -->
    <string name="ask_name_fragment_headline">이름을 가르쳐 주시겠어요?</string>
    <string name="ask_name_fragment_announcement">\@사용자 아이디는 고유한 나만의 아이디입니다. 나중에 언\n제든 바꿀 수 있습니다.</string>
    <string name="ask_name_fragment_hint">사용자 아이디</string>
    <string name="ask_name_fragment_accept">가입</string>

    <!-- RetweetBottomSheetDialog -->
    <string name="retweet_fragment_bottom_sheet">재게시</string>
    <string name="repost_fragment_bottom_sheet">인용</string>
    <string name="cancel_fragment_bottom_sheet">취소</string>

    <!-- ShareBottomSheetDialog -->
    <string name="link_Share_fragment_bottom_sheet">링크 복사</string>
    <string name="Share_fragment_bottom_sheet">공유하기</string>

    <!--ViewBottomSheetDialog-->
    <string name="view_bottom_sheet">조회수</string>
    <string name="announce_bottom_sheet">이 게시물이 조회된 횟수입니다. 자세히 알아보려면 <u><b>고객\n센터</b></u>를 방문하세요.</string>
    <string name="hide_bottom_sheet">숨기기</string>

    <!--HighLightFragment-->
    <string name="highlight_fragment_headline">프로필에 하이라이트 추가</string>
    <string name="highlight_fragment_announce">프로필에 게시물을 하이라이트하려면 Premium을 구독해\n야 합니다.</string>
    <string name="highlight_fragment_subscribe">Premium 구독하기</string>

    <!--EmptyBookMarkLayout-->
    <string name="empty_bookmark_layout_headline">나중을 위해 게시물 저장</string>
    <string name="empty_bookmark_layout_announce">좋은 게시물은 근야 흘려 보내지 마세요. 나중에 다시 쉽게\n찾을 수 있도록 북마크에 추가하세요.</string>


    <!--PostFragment-->
    <string name="post_fragment_temp_storage">임시 보관함</string>
    <string name="post_fragment_post">게시하기</string>
    <string name="post_fragment_sample_text">무슨 일이 일어나고 있나요?</string>
    <string name="post_fragment_reply_approve">모든 사람이 답글을 달 수 있습니다</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
