<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".presentation.view.login.PasswordFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/SubHeadline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/password_fragment_get_password"
        android:enabled="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_fragment_id_field"
        style="@style/Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:text="abc@gmail.com"
        android:textColor="@color/Grey_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="24dp"
        android:background="@color/BlueGrey_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <EditText
            android:id="@+id/password_fragment_pw_field"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/password_fragment_password"
            android:inputType="textPassword"
            android:textColorHint="@color/BlueGrey_800" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/password_fragment_pw_show_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_eye_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:tint="@color/BlueGrey_400" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@color/BlueGrey_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_fragment_id_field" />

    <Button
        android:id="@+id/password_fragment_login_btn"
        style="@style/SubHeadline3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/btn_login_fragment_next"
        android:text="@string/password_fragment_login"
        android:enabled="false"
        android:textColor="@color/Grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/password_fragment_lost_pw"
        style="@style/SubHeadline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password_fragment_forget_pw"
        android:textColor="@color/Grey_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_fragment_login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>
